# luarena-rs

./: .stylua.toml  Cargo.toml  flake.nix  foo.lua
.cargo/: config.toml
.github/workflows/: ci.yaml
characters/kai/: main.lua  meta.toml
characters/nya/: meta.toml
players/: kai.lua  lloyd.lua
players/kai/: main.lua  meta.lua  meta.toml
players/lloyd/: lloyd.lua  main.lua  meta.lua  meta.toml
players/nya/: meta.toml
src/: character.rs  cli.rs  color.rs  config.rs  game.rs  lua_player.rs  main.rs  math_utils.rs  player.rs  render.rs  settings.rs  wasm_player.rs
src/character/: lua.rs  meta.rs  wasm.rs
src/player/: lua.rs  meta.rs  wasm.rs
wit/: character.wit  player.wit
