[package]
name = "luarena-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
float_eq = "1.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
[dependencies.mlua]
version = "0.9.9"
features = ["lua54", "vendored"]
[dependencies.raylib]
git = "https://github.com/kenranunderscore/raylib-rs"
version = "5.0.1"
features = ["nobuild"]
